--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "listadetareas-app",
+  "name": "apptareas",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -34,6 +34,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "gh-pages": "^2.0.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
